--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - printf '[defaults]\nroles_path=../' >ansible.cfg
 
 before_script:
+  - export VAULT_PASSWORD=$SECURE_ENV_VARIABLE
   - echo "$VAULT_PASSWORD" > .vault_password
 
 script:
